argocd/manifests/firecrawl/base/service-playwright.yaml
apiVersion: v1
kind: Service
metadata:
  name: playwright-service
  namespace: firecrawl
spec:
  selector:
    app: playwright-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
