argocd/manifests/firecrawl/base/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: firecrawl
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
